--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Chansoo Song"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
 pytest = "^7.2.0"
 flake8 = "^5.0.4"
 pre-commit = "^2.20.0"
@@ -21,6 +21,8 @@ selenium = "^4.9.1"
 pandas = "^2.0.1"
 gensim = "^4.3.1"
 nltk = "^3.8.1"
+streamlit = "^1.23.1"
+tabulate = "^0.9.0"
 
 [tool.poetry.dev-dependencies]
 
