--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ gensim = "^4.3.1"
 nltk = "^3.8.1"
 streamlit = "^1.23.1"
 tabulate = "^0.9.0"
+scikit-learn = "^1.2.2"
 
 [tool.poetry.dev-dependencies]
 
