--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ nltk = "^3.8.1"
 streamlit = "^1.23.1"
 tabulate = "^0.9.0"
 scikit-learn = "^1.2.2"
+seaborn = "^0.12.2"
 
 [tool.poetry.dev-dependencies]
 
