--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,8 +7,8 @@ theme:
     - navigation.tabs
   palette: 
     # Palette toggle for light mode
-    - primary: brown
-      accent: deep orange
+    - primary: black
+      accent: light blue
       toggle:
         icon: material/weather-night
         name: Switch to dark mode
